changed background from img src to url

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-  background: <img src="https://greatescapepublishing.com/wp-content/uploads/thephotographerslife/wp-content/media//2012/01/Canvas.jpg"/>;
+  background: url(https://greatescapepublishing.com/wp-content/uploads/thephotographerslife/wp-content/media//2012/01/Canvas.jpg);
 }
 
 .contact {
