--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-  background: url(https://greatescapepublishing.com/wp-content/uploads/thephotographerslife/wp-content/media//2012/01/Canvas.jpg);
+  background: url(https://img.glyphs.co/img?q=85&w=900&src=aHR0cHM6Ly9zMy5tZWRpYWxvb3QuY29tL3Jlc291cmNlcy9HZW9tZXRyaWMtQmFja2dyb3VuZC1QYXR0ZXJucy1QcmV2aWV3LTJiLmpwZw==);
 }
 
 .contact {
