added life to links

--- a/main.css
+++ b/main.css
@@ -2,6 +2,14 @@ body {
   background: url(https://img.glyphs.co/img?q=85&w=900&src=aHR0cHM6Ly9zMy5tZWRpYWxvb3QuY29tL3Jlc291cmNlcy9HZW9tZXRyaWMtQmFja2dyb3VuZC1QYXR0ZXJucy1QcmV2aWV3LTJiLmpwZw==);
 }
 
+.links a{
+  cursor: pointer;
+}
+
+.links a:active {
+  top: 2px;
+}
+
 .contact {
   border-bottom: 2px solid black;
 }
