added footer and changed picture position, changed background colors and image positioning

--- a/main.css
+++ b/main.css
@@ -1,10 +1,5 @@
-body {
+.main-body {
   background: url(https://images.squarespace-cdn.com/content/v1/5e208638d0ad06563a49fa73/1580407468639-ZQ7U3NNOLI3ABQAA2DU0/ke17ZwdGBToddI8pDm48kNLmoMgP9-PoGL3pTpvfmf97gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UZn9JnVc0xDeoNGVJ3wrjE4Nx_EhhKi4CB_8Hn-bafWShA1iIgJHGOspu562nPK3kQ/North-Dakota-Badlands-Fine-Art-Photography.JPG?format=2500w);
-}
-
-nav li {
-  display: inline;
-  margin: 100px;
 }
 
 .links a{
@@ -19,7 +14,13 @@ nav li {
 
 .contact {
   border-bottom: 2px solid black;
+  background-color: #115ed1;
 }
+
+.footer{
+  background-color: #8c663a;
+}
+
 .name {
   font-size: 48px;
 }
