--- a/main.css
+++ b/main.css
@@ -3,12 +3,13 @@ html {
 }
 
 body {
-  height: 100%;
+  background: -moz-linear-gradient(135deg, rgba(140,102,58,1) 0%, rgba(15,60,120,1) 100%);
+  background: -webkit-linear-gradient(135deg, rgba(140,102,58,1) 0%, rgba(15,60,120,1) 100%);
+  background: -o-linear-gradient(135deg, rgba(140,102,58,1) 0%, rgba(15,60,120,1) 100%);
+  background: -ms-linear-gradient(135deg, rgba(140,102,58,1) 0%, rgba(15,60,120,1) 100%);
+  background: linear-gradient(315deg, rgba(140,102,58,1) 0%, rgba(15,60,120,1) 100%);
+  height: 4000px;
   margin: 0px;
-}
-
-.main-body {
-  background: url(https://images.squarespace-cdn.com/content/v1/5e208638d0ad06563a49fa73/1580407468639-ZQ7U3NNOLI3ABQAA2DU0/ke17ZwdGBToddI8pDm48kNLmoMgP9-PoGL3pTpvfmf97gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UZn9JnVc0xDeoNGVJ3wrjE4Nx_EhhKi4CB_8Hn-bafWShA1iIgJHGOspu562nPK3kQ/North-Dakota-Badlands-Fine-Art-Photography.JPG?format=2500w);
 }
 
 header .row,
@@ -19,6 +20,14 @@ footer .row {
 
 header {
   background-color: #115ed1;
+}
+
+.jumbotron {
+  background: url(https://images.squarespace-cdn.com/content/v1/5e208638d0ad06563a49fa73/1580407468639-ZQ7U3NNOLI3ABQAA2DU0/ke17ZwdGBToddI8pDm48kNLmoMgP9-PoGL3pTpvfmf97gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UZn9JnVc0xDeoNGVJ3wrjE4Nx_EhhKi4CB_8Hn-bafWShA1iIgJHGOspu562nPK3kQ/North-Dakota-Badlands-Fine-Art-Photography.JPG?format=2500w);
+}
+
+.placeholderphoto {
+  height: 200px
 }
 
 .social-links {
@@ -32,4 +41,8 @@ header {
 
 .footer {
   background-color: #8c663a;
+}
+
+.footer.col-sim-1 {
+  height: 400px;
 }
