--- a/main.css
+++ b/main.css
@@ -11,15 +11,29 @@ body {
   margin: 0px;
 }
 
-.jumbotron {
+header {
   background: url(https://images.squarespace-cdn.com/content/v1/5e208638d0ad06563a49fa73/1580407468639-ZQ7U3NNOLI3ABQAA2DU0/ke17ZwdGBToddI8pDm48kNLmoMgP9-PoGL3pTpvfmf97gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UZn9JnVc0xDeoNGVJ3wrjE4Nx_EhhKi4CB_8Hn-bafWShA1iIgJHGOspu562nPK3kQ/North-Dakota-Badlands-Fine-Art-Photography.JPG?format=2500w);
+  background-size: cover;
+  background-position: center;
 }
 
-.placeholderphoto img{
-  height: 200px;
-  margin: 0px;
+header .col {
+  margin-top: 10px;
 }
 
-footer img{
+.placeholderphoto img {
   height: 200px;
+  border-style: solid;
+  border-color: white;
+  border-width: 10px;
+}
+
+footer {
+  position: fixed;
+  bottom: 0px;
+  left: 304px;
+}
+
+footer img {
+  height: 100px;
 }
