--- a/main.css
+++ b/main.css
@@ -8,7 +8,8 @@ body {
   background: -o-linear-gradient(135deg, rgba(140,102,58,1) 0%, rgba(15,60,120,1) 100%);
   background: -ms-linear-gradient(135deg, rgba(140,102,58,1) 0%, rgba(15,60,120,1) 100%);
   background: linear-gradient(315deg, rgba(140,102,58,1) 0%, rgba(15,60,120,1) 100%);
-  margin: 0px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 header {
