--- a/main.css
+++ b/main.css
@@ -30,10 +30,9 @@ header .col {
   color: white;
 }
 
-header a {
-  color: white;
+.navbar a {
+  color: black;
   text-decoration: none;
-  font-weight: bold;
 }
 
 .placeholderphoto img {
