--- a/main.css
+++ b/main.css
@@ -10,19 +10,7 @@ body {
   background: linear-gradient(315deg, rgba(140,102,58,1) 0%, rgba(15,60,120,1) 100%);
   background-repeat: no-repeat;
   background-attachment: fixed;
-}
-
-.container nav{
-  padding: 10px;
-  width: 1920px;
-  position: fixed;
-  left: 0;
-}
-
-header {
-  background: url(NDBadlands.jpg);
-  background-size: cover;
-  background-position: center;
+  color: white;
 }
 
 .navbar a {
@@ -32,6 +20,13 @@ header {
 
 .dropdown-menu li {
    list-style-type: none;
+}
+
+.jumbotron {
+  background: url(NDBadlands.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 514px;
 }
 
 .placeholderphoto img {
