updated jumbotron padding

--- a/main.css
+++ b/main.css
@@ -22,11 +22,15 @@ body {
    list-style-type: none;
 }
 
-.jumbotron {
+section.jumbotron {
   background: url(NDBadlands.jpg);
   background-size: cover;
   background-position: center;
   height: 514px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .placeholderphoto img {
