--- a/main.css
+++ b/main.css
@@ -13,16 +13,16 @@ body {
   color: white;
 }
 
-.navbar a {
+header .navbar a {
   color: black;
   text-decoration: none;
 }
 
-.dropdown-menu li {
+header .dropdown-menu li {
    list-style-type: none;
 }
 
-section.jumbotron {
+header section.jumbotron {
   background: url(NDBadlands.jpg);
   background-size: cover;
   background-position: center;
@@ -31,6 +31,10 @@ section.jumbotron {
   padding-right: 16px;
   padding-top: 8px;
   padding-bottom: 8px;
+}
+
+header dev.container {
+  padding-left: 0px;
 }
 
 .placeholderphoto img {
