--- a/main.css
+++ b/main.css
@@ -7,20 +7,18 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   color: white;
-  position: absolute;
-  height: 100%;
 }
 
-div .navbar a {
+.navbar a {
   color: black;
   text-decoration: none;
 }
 
-div .dropdown-menu li {
+.dropdown-menu li {
    list-style-type: none;
 }
 
-div section.jumbotron {
+.header.jumbotron {
   background: url(NDBadlands.jpg);
   background-size: cover;
   background-position: center;
