undid last commit

--- a/main.css
+++ b/main.css
@@ -35,6 +35,8 @@ body {
 }
 
 .mephoto {
+  height: 200px;
+  width: 200px;
   border-style: solid;
   border-color: white;
   border-width: 10px;
@@ -47,6 +49,10 @@ body {
   font-weight: bold;
   font-size: 52px;
   height: 100%;
+}
+
+.ndoutline {
+  height: 200px;
 }
 
 .footer {
