--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 body {
   background: -moz-linear-gradient(135deg, rgba(140,102,58,1) 0%, rgba(15,60,120,1) 100%);
   background: -webkit-linear-gradient(135deg, rgba(140,102,58,1) 0%, rgba(15,60,120,1) 100%);
