--- a/main.css
+++ b/main.css
@@ -40,6 +40,8 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   padding-left: 0;
+  font-weight: bold;
+  font-size: 32px
 }
 
 .mephoto {
@@ -52,7 +54,12 @@ body {
 
 .contactList {
   list-style: none;
-  padding-left: 16px;
+  padding-left: 32px;
+  padding-top: 8px;
+}
+
+.contactList li {
+  margin: -16px;
 }
 
 .legendaryList {
@@ -87,10 +94,15 @@ body {
 
 @media (max-width: 576px) {
   .contactList {
-    margin-left: -16px;
+    margin-left: -24px;
+    font-size: 24;
+    margin-top: -4px;
+  }
+  .contactList li{
+    margin: -8px
   }
   .legendaryList {
-    font-size: 36px;
+    font-size: 32px;
     margin-top: 60px;
     margin-bottom: -100px;
   }
