--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 html {
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
@@ -127,6 +127,7 @@ body {
 
 .footer {
  height: 100%;
+ margin-top: 32px;
  display: flex;
  justify-content: space-around;
  align-items: flex-end;
