--- a/main.css
+++ b/main.css
@@ -123,6 +123,15 @@ body {
 
 .place {
   text-decoration-line: underline;
+  font-size: 36px;
+}
+
+.address {
+  font-size: 28px;
+}
+
+.date {
+  font-size: 20px;
 }
 
 .footer {
