--- a/main.css
+++ b/main.css
@@ -135,6 +135,14 @@ body {
   font-size: 20px;
 }
 
+.skillsList {
+  list-style: none;
+  margin-top: 32px;
+  padding-left: 0px;
+  font-weight: 500;
+  font-size: 24px;
+}
+
 .footer {
  height: 100%;
  margin-top: 32px;
