Replaced fot-size with font-size

--- a/main.css
+++ b/main.css
@@ -123,13 +123,13 @@ body {
 
 .aboutMe1 {
   font-weight: 500;
-  fot-size: 24px;
+  font-size: 24px;
   margin-top: 32px;
 }
 
 .aboutMe {
   font-weight: 500;
-  fot-size: 24px;
+  font-size: 24px;
 }
 
 .place {
